// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      hey
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      hey
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW vgGRl"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-bRBteW fwrlCu"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-jhbick htKfXz"
      tabindex="0"
    >
      <span
        class="sc-hjIEjD hqqYur"
      >
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djMJHV hIWVlF"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-JXQyv iLcsyW sc-djDiuc bnbDrZ"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-gHmoSK hMLjng"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djMJHV hIWVlF"
    >
      : 
    </i>
    <span
      class="sc-cVdwKd gshNdF"
    >
      Hey
       
      <span
        class="sc-JXQyv iLcsyW sc-kIBtVG hxjDVv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-gHmoSK hMLjng"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
